# codepicture

./: .gitattributes  README.md  pyproject.toml
.github/workflows/: benchmark.yml  test.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/01.1-testing-infrastructure/: 01.1-01-PLAN.md  01.1-01-SUMMARY.md  01.1-02-PLAN.md  01.1-02-SUMMARY.md  01.1-CONTEXT.md  01.1-RESEARCH.md  01.1-VERIFICATION.md
.planning/phases/02-syntax-highlighting/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-layout-engine/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-rendering/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-cli-orchestration/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-mlir-lexer/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-safety-nets/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/phases/08-mlir-hang-fix/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-CONTEXT.md  08-RESEARCH.md  08-VERIFICATION.md
.planning/phases/09-rendering-timeout-guards/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-CONTEXT.md  09-RESEARCH.md  09-VERIFICATION.md
.planning/phases/10-visual-regression-reliability/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-PLAN.md  10-03-SUMMARY.md  10-04-PLAN.md  10-04-SUMMARY.md  10-CONTEXT.md  10-RESEARCH.md  10-VERIFICATION.md
.planning/phases/11-performance-benchmarks/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-03-PLAN.md  11-03-SUMMARY.md  11-CONTEXT.md  11-RESEARCH.md  11-VERIFICATION.md
.planning/phases/12-core-highlighting-infrastructure/: 12-02-PLAN.md  12-02-SUMMARY.md  12-03-PLAN.md  12-04-PLAN.md  12-04-SUMMARY.md  12-RESEARCH.md  12-VERIFICATION.md
.planning/research/: ARCHITECTURE-HARDENING.md  ARCHITECTURE-LINE-HIGHLIGHTING.md  ARCHITECTURE.md  FEATURES.md  PITFALLS-LINE-HIGHLIGHTING.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: PYTHON_REWRITE_ARCHITECTURE.md  demo.py  generate-examples.sh
src/codepicture/: __init__.py  __main__.py  errors.py
tests/: conftest.py  test_cli.py  test_errors.py  test_highlights.py  test_highlights_integration.py  test_layout.py  test_orchestrator.py  test_render_canvas.py  test_render_chrome.py  test_render_renderer.py  test_render_shadow.py  test_word_wrap.py
tests/benchmarks/: conftest.py  test_bench_highlight.py  test_bench_layout.py  test_bench_pipeline.py  test_bench_render.py
tests/config/: test_loader.py  test_schema.py
tests/core/: test_types.py
tests/fixtures/: sample.py  sample_cpp.cpp  sample_javascript.js  sample_mlir.mlir  sample_python.py  sample_rust.rs
tests/highlight/: __init__.py  test_language_aliases.py  test_mlir_lexer.py  test_pygments_highlighter.py
tests/integration/: __init__.py  test_highlight_theme_integration.py  test_mlir_rendering.py
tests/text/: test_normalize.py
tests/theme/: __init__.py  test_contrast.py  test_loader.py  test_pygments_theme.py
tests/visual/: conftest.py  test_reliability_matrix.py  test_visual_regression.py
(+100 files in other folders)
